// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INPUT SET SELECTOR Input sets API has data: reorder after selecting an overlay 1`] = `
<div>
  <span
    class="bp3-popover-wrapper isPopoverParent"
  >
    <span
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="renderSelectedValue"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addInputSetButton StyledProps--color StyledProps--color-primary7 StyledProps--intent-primary Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-small-plus StyledProps--main"
            icon="small-plus"
          >
            <svg
              data-icon="small-plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-plus
              </desc>
              <path
                d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            pipeline.inputSets.selectPlaceholder
          </span>
        </button>
      </div>
    </span>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
      >
        <div
          class="bp3-popover bp3-minimal"
          style="transform-origin: center top;"
        >
          <div
            class="bp3-popover-content"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main popoverContainer"
            >
              <div
                class="searchContainer"
              >
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group search"
                  >
                    <input
                      class="bp3-input"
                      placeholder="search"
                      style="padding-right: 0px;"
                      type="text"
                      value=""
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-small"
              >
                <ul
                  class="bp3-menu list multiple"
                >
                  <li
                    class="item"
                    draggable="true"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          checked=""
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="step-group"
                          >
                            <svg
                              height="16"
                              id="step-group_svg__Layer_1"
                              viewBox="0 0 21 20"
                              width="16"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <style>
                                .step-group_svg__st0{fill:#fff!important}
                              </style>
                              <path
                                class="step-group_svg__st0"
                                d="M1 .8h13v13.3H1z"
                              />
                              <path
                                d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                              />
                              <path
                                class="step-group_svg__st0"
                                d="M7 6h13v13H7z"
                              />
                              <path
                                class="step-group_svg__st1"
                                d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                              />
                            </svg>
                          </span>
                          ol1
                        </p>
                      </label>
                      <span
                        class="order"
                      >
                        <p
                          class="StyledProps--font StyledProps--main orderText"
                        >
                          1
                        </p>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="main-reorder"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 12 13"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6 0c-.1 0-.2 0-.3.1L4.1 1.6c-.2.2-.1.6.3.6h3.2c.4 0 .5-.4.3-.6L6.3.1C6.2 0 6.1 0 6 0zM.7 3.4c-.2 0-.5.1-.6.3s-.1.5 0 .6c.1.2.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3zm0 2.5c-.3 0-.5.1-.6.3s-.1.4 0 .6.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3zm0 2.4c-.2 0-.5.1-.6.3s-.1.5 0 .7.3.3.6.3h10.6c.2 0 .5-.1.6-.3s.1-.4 0-.6-.3-.3-.6-.3H.7zm3.7 2.5c-.4 0-.5.4-.3.6l1.5 1.4c.2.2.5.2.7 0l1.5-1.4c.2-.2.1-.6-.3-.6z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="yaml-builder-input-sets"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 18 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="#22272D"
                              >
                                <path
                                  d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                                />
                                <path
                                  d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                                />
                              </g>
                            </svg>
                          </span>
                          is1
                        </p>
                      </label>
                    </div>
                  </li>
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="yaml-builder-input-sets"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 18 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="#22272D"
                              >
                                <path
                                  d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                                />
                                <path
                                  d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                                />
                              </g>
                            </svg>
                          </span>
                          is2
                        </p>
                      </label>
                    </div>
                  </li>
                </ul>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    pipeline.inputSets.applyInputSet
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`INPUT SET SELECTOR Input sets API has data: snapshot afteropening the input set list 1`] = `
<div>
  <span
    class="bp3-popover-wrapper isPopoverParent"
  >
    <span
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="renderSelectedValue"
      >
        <button
          class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main addInputSetButton StyledProps--color StyledProps--color-primary7 StyledProps--intent-primary Button--with-current-color Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="bp3-spinner bp3-button-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="20"
                stroke-width="16.00"
                viewBox="-3.00 -3.00 106.00 106.00"
                width="20"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
          <span
            class="bp3-icon bp3-icon-small-plus StyledProps--main"
            icon="small-plus"
          >
            <svg
              data-icon="small-plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-plus
              </desc>
              <path
                d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            pipeline.inputSets.selectPlaceholder
          </span>
        </button>
      </div>
    </span>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal"
        >
          <div
            class="bp3-popover-content"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main popoverContainer"
            >
              <div
                class="searchContainer"
              >
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group search"
                  >
                    <input
                      class="bp3-input"
                      placeholder="search"
                      style="padding-right: 0px;"
                      type="text"
                      value=""
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-small"
              >
                <ul
                  class="bp3-menu list multiple"
                >
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="yaml-builder-input-sets"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 18 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="#22272D"
                              >
                                <path
                                  d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                                />
                                <path
                                  d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                                />
                              </g>
                            </svg>
                          </span>
                          is1
                        </p>
                      </label>
                    </div>
                  </li>
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="yaml-builder-input-sets"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 18 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="#22272D"
                              >
                                <path
                                  d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                                />
                                <path
                                  d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                                />
                              </g>
                            </svg>
                          </span>
                          is2
                        </p>
                      </label>
                    </div>
                  </li>
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="step-group"
                          >
                            <svg
                              height="16"
                              id="step-group_svg__Layer_1"
                              viewBox="0 0 21 20"
                              width="16"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <style>
                                .step-group_svg__st0{fill:#fff!important}
                              </style>
                              <path
                                class="step-group_svg__st0"
                                d="M1 .8h13v13.3H1z"
                              />
                              <path
                                d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                              />
                              <path
                                class="step-group_svg__st0"
                                d="M7 6h13v13H7z"
                              />
                              <path
                                class="step-group_svg__st1"
                                d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                              />
                            </svg>
                          </span>
                          ol1
                        </p>
                      </label>
                    </div>
                  </li>
                </ul>
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    pipeline.inputSets.applyInputSet
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`INPUT SET SELECTOR Input sets API has data: snapshot afteropening the input set list 2`] = `
<div>
  <span
    class="bp3-popover-wrapper isPopoverParent"
  >
    <span
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="renderSelectedValue"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addInputSetButton StyledProps--color StyledProps--color-primary7 StyledProps--intent-primary Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-small-plus StyledProps--main"
            icon="small-plus"
          >
            <svg
              data-icon="small-plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-plus
              </desc>
              <path
                d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            pipeline.inputSets.selectPlaceholder
          </span>
        </button>
      </div>
    </span>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
      >
        <div
          class="bp3-popover bp3-minimal"
          style="transform-origin: center top;"
        >
          <div
            class="bp3-popover-content"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main popoverContainer"
            >
              <div
                class="searchContainer"
              >
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group search"
                  >
                    <input
                      class="bp3-input"
                      placeholder="search"
                      style="padding-right: 0px;"
                      type="text"
                      value=""
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-small"
              >
                <ul
                  class="bp3-menu list multiple"
                >
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="yaml-builder-input-sets"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 18 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="#22272D"
                              >
                                <path
                                  d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                                />
                                <path
                                  d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                                />
                              </g>
                            </svg>
                          </span>
                          is1
                        </p>
                      </label>
                    </div>
                  </li>
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="yaml-builder-input-sets"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 18 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="#22272D"
                              >
                                <path
                                  d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                                />
                                <path
                                  d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                                />
                              </g>
                            </svg>
                          </span>
                          is2
                        </p>
                      </label>
                    </div>
                  </li>
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="step-group"
                          >
                            <svg
                              height="16"
                              id="step-group_svg__Layer_1"
                              viewBox="0 0 21 20"
                              width="16"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <style>
                                .step-group_svg__st0{fill:#fff!important}
                              </style>
                              <path
                                class="step-group_svg__st0"
                                d="M1 .8h13v13.3H1z"
                              />
                              <path
                                d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                              />
                              <path
                                class="step-group_svg__st0"
                                d="M7 6h13v13H7z"
                              />
                              <path
                                class="step-group_svg__st1"
                                d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                              />
                            </svg>
                          </span>
                          ol1
                        </p>
                      </label>
                    </div>
                  </li>
                </ul>
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    pipeline.inputSets.applyInputSet
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`INPUT SET SELECTOR Input sets API has data: snapshot afteropening the input set list 3`] = `
<div>
  <span
    class="bp3-popover-wrapper isPopoverParent"
  >
    <span
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="renderSelectedValue"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addInputSetButton StyledProps--color StyledProps--color-primary7 StyledProps--intent-primary Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-small-plus StyledProps--main"
            icon="small-plus"
          >
            <svg
              data-icon="small-plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-plus
              </desc>
              <path
                d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            pipeline.inputSets.selectPlaceholder
          </span>
        </button>
      </div>
    </span>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
      >
        <div
          class="bp3-popover bp3-minimal"
          style="transform-origin: center top;"
        >
          <div
            class="bp3-popover-content"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main popoverContainer"
            >
              <div
                class="searchContainer"
              >
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group search"
                  >
                    <input
                      class="bp3-input"
                      placeholder="search"
                      style="padding-right: 0px;"
                      type="text"
                      value=""
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-small"
              >
                <ul
                  class="bp3-menu list multiple"
                >
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="yaml-builder-input-sets"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 18 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="#22272D"
                              >
                                <path
                                  d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                                />
                                <path
                                  d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                                />
                              </g>
                            </svg>
                          </span>
                          is1
                        </p>
                      </label>
                    </div>
                  </li>
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="yaml-builder-input-sets"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 18 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="#22272D"
                              >
                                <path
                                  d="M12.946 5.347a.49.49 0 00-.492-.486H4.581a.49.49 0 00-.492.486c0 .269.22.486.492.486h7.873a.49.49 0 00.492-.486zM4.581 8.264c-.272 0-.492.218-.492.486s.22.486.492.486H9.01c.271 0 .492-.218.492-.486s-.22-.486-.492-.486H4.58zm7.92 5.833H3.644a.55.55 0 01-.538-.56V2.018a.55.55 0 01.538-.56h9.748a.55.55 0 01.54.56v5.325c0 .269.22.486.491.486a.49.49 0 00.492-.486V2.02c0-.844-.679-1.533-1.523-1.533H3.643c-.844 0-1.523.69-1.523 1.533v11.517c0 .844.68 1.533 1.523 1.533h8.859a.49.49 0 00.492-.486.49.49 0 00-.492-.486z"
                                />
                                <path
                                  d="M15.676 10.418h-1.005V9.413a.524.524 0 10-1.048 0v1.004H12.28a.524.524 0 000 1.049h1.343v1.343a.524.524 0 101.048 0v-1.343h1.005a.524.524 0 000-1.048z"
                                />
                              </g>
                            </svg>
                          </span>
                          is2
                        </p>
                      </label>
                    </div>
                  </li>
                  <li
                    class="item"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
                    >
                      <label
                        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                      >
                        <input
                          type="checkbox"
                        />
                        <span
                          class="bp3-control-indicator"
                        />
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                          style="display: flex; align-items: center;"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                            data-icon="step-group"
                          >
                            <svg
                              height="16"
                              id="step-group_svg__Layer_1"
                              viewBox="0 0 21 20"
                              width="16"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <style>
                                .step-group_svg__st0{fill:#fff!important}
                              </style>
                              <path
                                class="step-group_svg__st0"
                                d="M1 .8h13v13.3H1z"
                              />
                              <path
                                d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                              />
                              <path
                                class="step-group_svg__st0"
                                d="M7 6h13v13H7z"
                              />
                              <path
                                class="step-group_svg__st1"
                                d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                              />
                            </svg>
                          </span>
                          ol1
                        </p>
                      </label>
                    </div>
                  </li>
                </ul>
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    pipeline.inputSets.applyInputSet
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;
